--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "engine.io-stream",
-  "version": "0.4.3",
+  "version": "0.4.3-soldair",
   "description": "Make engine.io a valid node stream",
   "keywords": [],
   "author": "Raynos <raynos2@gmail.com>",
@@ -18,8 +18,8 @@
     "email": "raynos2@gmail.com"
   },
   "dependencies": {
-    "engine.io": "0.7.12",
-    "engine.io-client": "0.7.12"
+    "engine.io": "~0.9.0",
+    "engine.io-client": "~0.9.0"
   },
   "devDependencies": {
     "after": "0.8.1",
